Night Light is unavailable info box looks quite poor
I saw this yesterday testing Fedora 37 / GNOME 43 beta:
Issues:
- The heading isn't using heading capitalization.
- The body text is missing a period at the end of the sentence.
- The layout is very odd - lots of space between the lines of text, not enough space above the heading and below the body.
- I found the body text to be oddly phrased, though I'm not sure how to resolve that.
- The body text was inaccurate in my case: it was being shown because I was running a VM, but that's not mentioned as a reason. Could we detect the VM case and show a custom message in that case?