night-light-page: Add a missing period

According to [1], the string "This could be the result of
the graphics driver being used, or the desktop being used
remotely" should end with a period. This wasn't addressed
in [2], so add the period to fix this issue.

[1] https://gitlab.gnome.org/GNOME/gnome-control-center/-/issues/2020
[2] https://gitlab.gnome.org/GNOME/gnome-control-center/-/commit/909f068672f251f23a9c678147c444e9e299bb0a